# ferox

./: Cargo.toml  README.md  main.rs  scene.json
src/: init.rs  main.rs  raytracer.rs  structures.rs
