[package]
name = "ferox"
description = "Ferox is a ray-tracing renderer written in Rust." 
repository = "https://github.com/adharmic/ferox"
license = "CC0-1.0" 
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
glam = { version = "0.30.1", features = ["serde"] }
image = "0.25.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"

[[bin]]
name = "ferox"
path = "src/main.rs"
